--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ main {
     margin-bottom: 20px;
 }
 
-#car-image {
+#carro-imagem {
     width: 300px;
     height: auto;
     margin-bottom: 20px;
