--- a/styles.css
+++ b/styles.css
@@ -195,31 +195,51 @@ body.dark .sidebar header .toggle{
     background-color: #0056b3;
 }
 
-#cart {
-    display: none;
-    margin-top: 10px;
-    padding: 10px;
-    background-color: #dff0d8;
-    border: 1px solid #c3e6cb;
-    color: #155724;
-}
 
 
-#cart {
+#cart::after {
     display: flex;
+    flex-direction: column;
     height: 50%; /* Por padrão, a mensagem está oculta */
-    background-color: var(--primary-color);
+    background-color: var(--sidebar-color);
     color: var(--text-color);
     padding: 10px;
-    margin-top:20px ;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: all 0.5s ease;
   }
 
-.nav-link {
+  #cart ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--text-color);
+    
+    
+  }
+
+  #cart h2{
+    color: var(--text-color);
+  }
+  
+  #cart ul li {
+    padding: 10px 0;
+    border-bottom: 1px solid var(--text-color);
+  }
+  #cart button{
+    padding: 8px 15px;
     margin: 10px;
-}
+    padding: 10px 20px;
+    background-color: #333;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+
 
 .image-text{
     display: flex;
@@ -374,6 +394,7 @@ body.dark{
 main{
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 10%;
