--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@ body {
 }
 header {
     background-color: #333;
-    color: white;
-    padding: 20px 0;
+    color: var(--body-color);
+    padding: 10px 0;
     text-align: center;
 }
 
@@ -418,17 +418,22 @@ main{
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    background-color: white;
+    background-color: var(--text-color);
     margin: 10px;
     padding: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px var(--primary-color);
     transition: 0.5s;
+}
+
+.modeloColor select, option{
+    color: var(--primary-color-light);
+    background-color: var(--text-color)
 }
 
 
 #banner img {
-    max-width: 100%;
-    height: auto;
+    max-width: 5200px;
+    height: 285px;
     margin-bottom: 20px;
 }
 
@@ -449,12 +454,42 @@ main{
     flex-direction: column;
     justify-content: space-between;
 }
+
+.spinner{
+    max-width: 5200px;
+    height: 285px;
+}
+
+.loading-spinner {
+    display: none;
+    border: 10px solid var(--text-color);
+    border-radius: 50%;
+    border-top-color: var(--primary-color);
+    width: 80px;
+    height: 80px;
+    animation: spin 2s linear infinite;
+    margin-left: 45%;
+    margin-top: 25%;
+    margin-bottom:47%;  
+
+}
+
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.hidden {
+    display: none;
+}
+
 .modeloinfo p{
     margin: 0;
     padding: 0;
     font-size: 15px;
     font-weight: bold;
-    color: #333;
+    color: var(--text-color);
     text-align: center;
     width: 100%;
     margin-bottom: 10px;
@@ -476,11 +511,12 @@ main{
 #banner button {
     margin: 10px;
     padding: 10px 20px;
-    background-color: #333;
-    color: white;
+    background-color: var(--sidebar-color);
+    color: var(--text-color);
     border: none;
     cursor: pointer;
 }
+
 
 footer {
     background-color: #333;
